--- a/style-calculator.css
+++ b/style-calculator.css
@@ -471,4 +471,6 @@ input[type="button"]:hover {
 div.form-container {
   margin-top: 10vh;
   margin-bottom: 10vh;
+  margin-left: 5vw;
+  margin-right: 5vw;
 }
