--- a/style-calculator.css
+++ b/style-calculator.css
@@ -262,6 +262,9 @@ body {
       margin-left: 5vw;
       margin-right: 5vw;
     }
+    div.form-container {
+      margin-top: 0vh;
+    }
     }
     @media (min-width: 375px) and (max-width: 767px) {
     .menubar ul {
