--- a/style-calculator.css
+++ b/style-calculator.css
@@ -391,6 +391,12 @@ div.form-container {
       margin-left: 5vw;
       margin-right: 5vw;
     }
+    div.form-container {
+      margin-top: 0vh;
+    }
+    h3{
+      margin-top: 0vh;
+    }
     }
     @media only screen and (max-width: 374px) {
     .menubar ul {
