--- a/style-calculator.css
+++ b/style-calculator.css
@@ -398,6 +398,7 @@ div.form-container {
       margin-top: 0vh;
       margin-left: 0vw;
       margin-right: 0vw;
+      font-size: 16px;
     }
     }
     @media only screen and (max-width: 374px) {
