--- a/style-calculator.css
+++ b/style-calculator.css
@@ -455,4 +455,13 @@ div.form-container {
       margin-left: 5vw;
       margin-right: 5vw;
     }
+    div.form-container {
+      margin-top: 0vh;
+    }
+    h3{
+      margin-top: 0vh;
+      margin-left: 0vw;
+      margin-right: 0vw;
+      font-size: 16px;
+    }
     }
