--- a/style-gallery.css
+++ b/style-gallery.css
@@ -305,6 +305,14 @@ html {
   font-size: 1em;
   font-family: 'Open Sans';
   }
+  .footer {
+    padding-top: 40px;
+    padding-bottom: 20px;
+    background-color: #000000;
+    display: grid;
+    grid-template-columns: [col1] 1fr [col7];
+    grid-gap: 0px;
+  }
   
   /* Add Animation */
   @-webkit-keyframes animatetop {
@@ -351,58 +359,6 @@ html {
   }
 
   /* Responsive layout - makes a one column-layout instead of a two-column layout */
-  @media only screen and (min-width: 880px) {
-    .stripe {
-      grid-template-columns: [left] 100px [col1] 1fr [col7] 100px [right];
-    }
-    .content_container.page_grid {
-      display: grid;
-      grid-template-columns: [col2] 1fr [col3] 1fr [col4] 1fr [col5] 1fr [col6];
-      grid-gap: 40px;
-    }
-    .footer {
-      padding-top: 40px;
-      padding-bottom: 20px;
-      background-color: #000000;
-      display: grid;
-      grid-template-columns: [col1] 1fr [col7];
-      grid-gap: 0px;
-    }
-    .flex-container {
-      display: flex;
-      flex-direction: row;
-    }
-    
-    .flex-item-left {
-      padding: 0px;
-      flex: 50%;
-      margin-left: 5vw;
-    }
-    
-    .flex-item-right {
-      padding: 0px;
-      flex: 50%;
-      margin-right: 5vw;
-    }
-  }
-  @media (max-width: 800px) {
-    .flex-item-right, .flex-item-left {
-      flex-direction: column;
-      margin: 0px;
-    }
-    .content_container input[type=text] {
-      float: none;
-      display: block;
-      text-align: left;
-      width: 100%;
-      margin: 0;
-      padding: 14px;
-    }
-    
-    .content_container input[type=text] {
-      border: 1px solid #ccc;  
-    }
-  }
   @media print,
     (-webkit-min-device-pixel-ratio: 1.25),
     (min-resolution: 1.25dppx),
@@ -545,3 +501,188 @@ li {
 #image {
     margin-left: 60px;
 }
+
+@media only screen and (min-width: 1280px) {
+  .stripe {
+    grid-template-columns: [left] 100px [col1] 1fr [col7] 100px [right];
+  }
+  .content_container.page_grid {
+    display: grid;
+    grid-template-columns: [col2] 1fr [col3] 1fr [col4] 1fr [col5] 1fr [col6];
+    grid-gap: 40px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  .menubar ul {
+    display: none;
+  }
+  .topnav {
+    display: block;
+  }
+  .topnav a {
+    float: left;
+    display: block;
+    color: #505050;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon1 {
+    float: right;
+    display: block;
+  }
+  .topnav a.icon2 {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon1 {
+    position: absolute;
+    right: 6.5vw;
+    top: 0;
+  }
+  .topnav.responsive .icon2 {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .stripe.introduction {
+    background-size: 100%;
+  }
+  .stripe.introduction h1 {
+    font-size: 3.5em;
+  }
+  .stripe.introduction h2 {
+    font-size: 18px;
+    margin-top: 5vh;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+  }
+  @media (min-width: 375px) and (max-width: 767px) {
+  .menubar ul {
+    display: none;
+  }
+  .topnav {
+    display: block;
+  }
+  .topnav a {
+    float: left;
+    display: block;
+    color: #505050;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon1 {
+    float: right;
+    display: block;
+  }
+  .topnav a.icon2 {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon1 {
+    position: absolute;
+    right: 12vw;
+    top: 0;
+  }
+  .topnav.responsive .icon2 {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .stripe.introduction {
+    background-size: 175%;
+  }
+  .stripe.introduction h1 {
+    font-size: 2em;
+    margin-top: 20vh;
+  }
+  .stripe.introduction h2 {
+    font-size: 16px;
+    margin-top: 5vh;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+  button.accordion {
+    padding: 5%;
+    font-size: 1.25em;
+    margin-top: 5vh;
+}
+  }
+  @media only screen and (max-width: 374px) {
+  .menubar ul {
+    display: none;
+  }
+  .topnav {
+    display: block;
+  }
+  .topnav a {
+    float: left;
+    display: block;
+    color: #505050;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon1 {
+    float: right;
+    display: block;
+  }
+  .topnav a.icon2 {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon1 {
+    position: absolute;
+    right: 12vw;
+    top: 0;
+  }
+  .topnav.responsive .icon2 {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .stripe.introduction {
+    background-size: 300%;
+  }
+  .stripe.introduction h1 {
+    font-size: 2em;
+    margin-top: 20vh;
+  }
+  .stripe.introduction h2 {
+    font-size: 16px;
+    margin-top: 5vh;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+  button.accordion {
+    padding: 5%;
+    font-size: 1.25em;
+    margin-top: 5vh;
+}
+  }
