--- a/style-gallery.css
+++ b/style-gallery.css
@@ -498,6 +498,10 @@ li {
   width: 60px;
   height: 40px;
 }
+.image_large {
+  width: 500px;
+  height: 300px;
+}
 @media only screen and (min-width: 1280px) {
   .stripe {
     grid-template-columns: [left] 100px [col1] 1fr [col7] 100px [right];
