--- a/style-gallery.css
+++ b/style-gallery.css
@@ -453,6 +453,16 @@ section.gallery {
 header, aside, nav {
     display: block;}
 
+.wrapper {
+    width: 940px;
+    margin: 20px auto 20px auto;
+    border: 2px solid #000000;
+    background-color: #ffffff;}
+
+header {
+    height: 160px;
+   }
+
 nav ul.image_list {
     margin: 0px;
     padding: 5px 0px 5px 30px;
@@ -480,6 +490,7 @@ li {
     padding-right: 10px;
     display: inline;
 }
+
 .image_small {
   width: 60px;
   height: 40px;
