--- a/style-gallery.css
+++ b/style-gallery.css
@@ -466,9 +466,10 @@ header {
 ul.image_list {
 	padding-left: 0px;
   padding-right: 0px;
-  padding: 5px 0px 5px 30px;
   margin-left: auto;
   margin-right: auto; 
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 li.image_list {
