--- a/style-gallery.css
+++ b/style-gallery.css
@@ -477,8 +477,8 @@ li.image_list {
 }
 
 .image_small {
-  width: 60px;
-  height: 40px;
+  width: 10vw;
+  height: 10vh;
 }
 .image_large {
   width: 500px;
