--- a/style-gallery.css
+++ b/style-gallery.css
@@ -448,6 +448,7 @@ section.gallery {
   margin-top: 10vh; 
   margin-right:auto; 
   margin-left:auto;
+  text-align: center;
 }
 
 header, aside, nav {
