--- a/style-gallery.css
+++ b/style-gallery.css
@@ -446,8 +446,8 @@ html {
 
 section.gallery {
   margin-top: 10vh; 
-  margin-right:auto; 
-  margin-left:auto;
+  margin-right: auto; 
+  margin-left: auto;
   text-align: center;
 }
 
@@ -478,12 +478,12 @@ li.image_list {
 }
 
 .image_small {
-  width: 10vw;
+  width: 8vw;
   height: 10vh;
 }
 .image_large {
-  width: 500px;
-  height: 300px;
+  width: 56vw;
+  height: auto;
 }
 @media only screen and (min-width: 1280px) {
   .stripe {
