--- a/style-gallery.css
+++ b/style-gallery.css
@@ -455,8 +455,8 @@ header, aside, nav {
   }
 
   div.fotorama_image {
-    width: 150px;
-    height: 150px;
+    width: 15vw;
+    height: 15vw;
   }
 
     section.gallery {
