--- a/style-gallery.css
+++ b/style-gallery.css
@@ -588,11 +588,9 @@ li.image_list {
     margin-left: 5vw;
     margin-right: 5vw;
   }
-  button.accordion {
-    padding: 5%;
-    font-size: 1.25em;
-    margin-top: 5vh;
-}
+  .image_small {
+    height: 5vh;
+  }
   }
   @media only screen and (max-width: 374px) {
   .menubar ul {
@@ -648,9 +646,7 @@ li.image_list {
     margin-left: 5vw;
     margin-right: 5vw;
   }
-  button.accordion {
-    padding: 5%;
-    font-size: 1.25em;
-    margin-top: 5vh;
-}
+  .image_small {
+    height: 5vh;
+  }
   }
