--- a/style-contactus.css
+++ b/style-contactus.css
@@ -236,13 +236,10 @@ html {
     }
 /*======================Form========================*/
 .container {
-  background-color: #ffffff;
-  padding: 20px;
-  max-width: 600px;
-  margin: 0 auto;
-  margin-top: 50px;
-  border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+  margin-top: 10vh;
+  margin-bottom: 10vh; 
+  margin-left: 5vw;
+  margin-right: 5vw;
 }
 h1 {
   text-align: center;
