--- a/style-contactus.css
+++ b/style-contactus.css
@@ -241,7 +241,7 @@ html {
   margin-left: 5vw;
   margin-right: 5vw;
 }
-h1 {
+.container h1 {
   text-align: center;
   margin-top: 0;
   font-family: 'Lato', sans-serif;
