--- a/style-contactus.css
+++ b/style-contactus.css
@@ -537,6 +537,9 @@ div.form-container {
       margin-left: 5vw;
       margin-right: 5vw;
     }
+    .container {
+      margin-top: 0vh;
+    }
   }
   @media only screen and (max-width: 374px) {
     .menubar ul {
