--- a/style-contactus.css
+++ b/style-contactus.css
@@ -595,6 +595,9 @@ div.form-container {
       margin-left: 5vw;
       margin-right: 5vw;
     }
+    .container {
+      margin-top: 0vh;
+    }
   }
   @media print,
     (-webkit-min-device-pixel-ratio: 1.25),
