--- a/style-gallery.css
+++ b/style-gallery.css
@@ -471,6 +471,7 @@ li.image_list {
 }
 .slideshow h2 {
   font-size: 1.5em;
+  text-align: center;
 }
 @media only screen and (min-width: 1280px) {
   .stripe {
