--- a/faq.css
+++ b/faq.css
@@ -44,21 +44,21 @@ body {
     margin-bottom: 20vh; 
   }
   h3.accordion {
-    background-color: #70cf84;
-    color:  #ffffff;
+    background-color: #70cf84 !important;
+    color:  #ffffff !important;
     cursor: pointer;
-    padding: 2%;
+    padding: 2% !important;
     border: 0px;
     border-radius:10px;
     width: 100%;
-    margin-left: 0vw;
-    margin-right: 0vw;
-    margin-top: 10vh;
-    margin-bottom: 0vh;
+    margin-left: 0vw !important;
+    margin-right: 0vw !important;
+    margin-top: 10vh !important;
+    margin-bottom: 0vh !important;
     text-align: left;
     outline: none;
     transition: 0.4s;
-    font-size: 1.5em;
+    font-size: 1.5em !important;
 }
   
   .active, .accordion:hover {
@@ -352,9 +352,9 @@ body {
       margin-right: 5vw;
     }
     button.accordion {
-      padding: 5%;
-      font-size: 1.25em;
-      margin-top: 5vh;
+      padding: 5% !important;
+      font-size: 1.25em !important;
+      margin-top: 5vh !important;
   }
     }
     @media only screen and (max-width: 374px) {
@@ -412,8 +412,8 @@ body {
       margin-right: 5vw;
     }
     button.accordion {
-      padding: 5%;
-      font-size: 1.25em;
-      margin-top: 5vh;
+      padding: 5% !important;
+      font-size: 1.25em !important;
+      margin-top: 5vh !important;
   }
     }
