--- a/faq.css
+++ b/faq.css
@@ -69,7 +69,8 @@ body {
 .panel {
   padding: 2vh 2vw !important;
   background-color: #fff !important;
-  width: 100% important;
+  width: 100% !important;
+  border: 0px !important;
   display: none;
   overflow: hidden;
 }
