--- a/faq.css
+++ b/faq.css
@@ -50,7 +50,7 @@ body {
     padding: 2% !important;
     border: 0px;
     border-radius:10px;
-    width: 100%;
+    width: auto !important;
     margin-left: 0vw !important;
     margin-right: 0vw !important;
     margin-top: 10vh !important;
