--- a/calculator.css
+++ b/calculator.css
@@ -1,20 +1,24 @@
 body {
-    background-color: #ffffff;
-    font-family: 'Lato', sans-serif;
-    margin-block-start: 0 !important;
-    margin-block-end: 0 !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-  }
-  .stripe.introduction {
-    background-image: linear-gradient(rgba(255,255,255,0.65), rgba(255,255,255,0.65)), url('images/intro.jpg');
-    background-size: 100%;
-    height: 80vh;
-    background-repeat: no-repeat;
-    padding: 0px;
-  }
-  .stripe.introduction h1 {
-  font-family: 'Rozha One',serif;
+  background-color: #ffffff;
+  font-family: "Lato", sans-serif;
+  margin-block-start: 0 !important;
+  margin-block-end: 0 !important;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+.stripe.introduction {
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.65),
+      rgba(255, 255, 255, 0.65)
+    ),
+    url("images/intro.jpg");
+  background-size: 100%;
+  height: 80vh;
+  background-repeat: no-repeat;
+  padding: 0px;
+}
+.stripe.introduction h1 {
+  font-family: "Rozha One", serif;
   text-align: center;
   font-size: 4.5em;
   font-weight: 100;
@@ -24,176 +28,175 @@ body {
   margin-left: auto;
   margin-right: auto;
   letter-spacing: 5px;
-  }
+}
 
-  .stripe.introduction h2 {
-    text-align: center;
-    font-size: 20px;
-    color: #0f1f2a;
-    margin-top: 1vh;
-    margin-bottom: 0vh;
-    margin-left: auto;
-    margin-right: auto;
-    letter-spacing: 2px; 
-  }
-  h3{
-    text-align: center;
-    font-size: 20px;
-    color: #0f1f2a;
-    margin-top: 10vh;
-    margin-bottom: 5vh;
-    margin-left: 10vh;
-    margin-right: 10vh;
-    letter-spacing: 2px; 
-  }
+.stripe.introduction h2 {
+  text-align: center;
+  font-size: 20px;
+  color: #0f1f2a;
+  margin-top: 1vh;
+  margin-bottom: 0vh;
+  margin-left: auto;
+  margin-right: auto;
+  letter-spacing: 2px;
+}
+h3 {
+  text-align: center;
+  font-size: 20px;
+  color: #0f1f2a;
+  margin-top: 10vh;
+  margin-bottom: 5vh;
+  margin-left: 10vh;
+  margin-right: 10vh;
+  letter-spacing: 2px;
+}
 
 .stripe {
-    display: grid;
-    grid-template-columns: [left] 20px [col1] 1fr [col7] 20px [right];
-  }
-  .content_container {
-    grid-column-start: col1;
-    grid-column-end: col7;
-  }
-  /*======================menubar========================*/
+  display: grid;
+  grid-template-columns: [left] 20px [col1] 1fr [col7] 20px [right];
+}
+.content_container {
+  grid-column-start: col1;
+  grid-column-end: col7;
+}
+/*======================menubar========================*/
 .menubar {
-    background-color: #ffffff;
-    padding: 10px 0px;
-    position: fixed;
-    width: 100vw;
-    top: 0;
-    overflow: hidden;
-    z-index: 9999;
-    box-shadow: 0px 12px 24px rgb(0 0 0 / 10%);
-  }
-  .menubar ul {
-    list-style-type: none;
-    padding: 0;
-    margin-block-start: 0 !important;
-    margin-block-end: 0 !important;
-    display: flex;
-    justify-content: space-around;
-  }
-  .menubar ul li {
-    display: flex;
-    vertical-align: middle;
-    align-items: center;
-  }
-  .menubar a {
-    text-decoration: none;
-    letter-spacing: 1px;
-    font-size: 1em;
-    font-weight: 600;
-    padding: 10px;
-    color: #505050 !important;
-    vertical-align: middle;
-  }
-  .menubar a:hover {
-    background-color: grey;
-  }
-  img.logo {
-    width: 50px;
-    height: fit-content;
-  
-  }
-  a.logo {
-    text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 18px;
-    padding: 10px;
-    color: #ffffff;
-    vertical-align: middle;
-  }
-  .content_container input[type=text] {
-    float: right;
-    padding: 6px;
-    margin-top: 0px;
-    margin-right: 0px;
-    border-bottom: 1px solid #505050;
-    border-top: 0px;
-    border-right: 0px;
-    border-left: 0px; 
-    font-size: 17px;
-  }
-  ::placeholder {
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 16px;
-  }
-  .topnav {
-    display: none;
-    }
-  /*======================menubar========================*/
-  /*======================footer========================*/
-  div.footer1 {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  div.footer2 {
-    margin-top: 10px;
-    margin-left: 30vw;
-    margin-right: 30vw;
-  }
-  p.footer1 {
-    margin-left: auto;
-    margin-right: auto;
-    color: #ffffff;
-    text-align: right;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 18px;
-  }
-  p.footer2 {
-    color: #ffffff;
-    text-align: center;
-    font-size: 14px;
-  }
-  img.logoend {
-    display: block;
-    width: 50%;
-    margin: auto;
-  }
-  p.logoend {
-    text-decoration: none;
-    text-transform: uppercase;
-    margin-left: auto; 
-    margin-right: auto; 
-    text-align: center; 
-    letter-spacing: 1px;
-    font-size: 18px;
-    color: #ffffff;
-    vertical-align: middle;
-  }
-  .footer {
-    padding-top: 40px;
-    padding-bottom: 20px;
-    background-color: #000000;
-    display: grid;
-    grid-template-columns: [col1] 1fr [col7];
-    grid-gap: 0px;
-  }
-  /*======================footer========================*/
-  #top {
-    position: fixed; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
-    right: 30px; /* Place the button 30px from the right */
-    z-index: 99; /* Make sure it does not overlap */
-    border: none; /* Remove borders */
-    outline: none; /* Remove outline */
-    background-color: #70cf84; /* Set a background color */
-    color: white; /* Text color */
-    cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 15px; /* Some padding */
-    border-radius: 5px; /* Rounded corners */
-    font-size: 18px; /* Increase font size */
-    }
-    
-    #top:hover {
-    background-color: #505050; /* Add a dark-grey background on hover */
-    }
+  background-color: #ffffff;
+  padding: 10px 0px;
+  position: fixed;
+  width: 100vw;
+  top: 0;
+  overflow: hidden;
+  z-index: 9999;
+  box-shadow: 0px 12px 24px rgb(0 0 0 / 10%);
+}
+.menubar ul {
+  list-style-type: none;
+  padding: 0;
+  margin-block-start: 0 !important;
+  margin-block-end: 0 !important;
+  display: flex;
+  justify-content: space-around;
+}
+.menubar ul li {
+  display: flex;
+  vertical-align: middle;
+  align-items: center;
+}
+.menubar a {
+  text-decoration: none;
+  letter-spacing: 1px;
+  font-size: 1em;
+  font-weight: 600;
+  padding: 10px;
+  color: #505050 !important;
+  vertical-align: middle;
+}
+.menubar a:hover {
+  background-color: grey;
+}
+img.logo {
+  width: 50px;
+  height: fit-content;
+}
+a.logo {
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 18px;
+  padding: 10px;
+  color: #ffffff;
+  vertical-align: middle;
+}
+.content_container input[type="text"] {
+  float: right;
+  padding: 6px;
+  margin-top: 0px;
+  margin-right: 0px;
+  border-bottom: 1px solid #505050;
+  border-top: 0px;
+  border-right: 0px;
+  border-left: 0px;
+  font-size: 17px;
+}
+::placeholder {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+.topnav {
+  display: none;
+}
+/*======================menubar========================*/
+/*======================footer========================*/
+div.footer1 {
+  margin-left: auto;
+  margin-right: auto;
+}
+div.footer2 {
+  margin-top: 10px;
+  margin-left: 30vw;
+  margin-right: 30vw;
+}
+p.footer1 {
+  margin-left: auto;
+  margin-right: auto;
+  color: #ffffff;
+  text-align: right;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 18px;
+}
+p.footer2 {
+  color: #ffffff;
+  text-align: center;
+  font-size: 14px;
+}
+img.logoend {
+  display: block;
+  width: 50%;
+  margin: auto;
+}
+p.logoend {
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  letter-spacing: 1px;
+  font-size: 18px;
+  color: #ffffff;
+  vertical-align: middle;
+}
+.footer {
+  padding-top: 40px;
+  padding-bottom: 20px;
+  background-color: #000000;
+  display: grid;
+  grid-template-columns: [col1] 1fr [col7];
+  grid-gap: 0px;
+}
+/*======================footer========================*/
+#top {
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: #70cf84; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 5px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
 
-    /*======================Form========================*/
+#top:hover {
+  background-color: #505050; /* Add a dark-grey background on hover */
+}
+
+/*======================Form========================*/
 .container {
   background-color: #ffffff;
   padding: 20px;
@@ -201,7 +204,7 @@ body {
   margin: 0 auto;
   margin-top: 50px;
   border-radius: 5px;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 form {
   display: flex;
@@ -211,7 +214,8 @@ label {
   margin-top: 10px;
   font-weight: bold;
 }
-input[type="textform"], select {
+input[type="textform"],
+select {
   border: none;
   border-radius: 3px;
   padding: 10px;
@@ -219,13 +223,13 @@ input[type="textform"], select {
   margin-bottom: 15px;
   font-size: 16px;
   background-color: #f7f7f7;
-  box-shadow: 0px 0px 5px rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
   resize: none;
   min-height: 40px;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 input[type="button"] {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   border: none;
   border-radius: 3px;
@@ -233,7 +237,7 @@ input[type="button"] {
   font-size: 16px;
   cursor: pointer;
   transition: all 0.3s ease-in-out;
-  box-shadow: 0px 0px 5px rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
   margin-top: 15px;
 }
 input[type="button"]:hover {
@@ -249,7 +253,7 @@ input[type="button"]:hover {
   margin-top: 5px;
 }
 .success {
-  color: #4CAF50;
+  color: #4caf50;
   font-size: 14px;
   margin-top: 5px;
 }
@@ -260,206 +264,218 @@ div.form-container {
   margin-left: 5vw;
   margin-right: 5vw;
 }
-  @media only screen and (min-width: 1280px) {
-    .stripe {
-      grid-template-columns: [left] 100px [col1] 1fr [col7] 100px [right];
-    }
-    .content_container.page_grid.features {
-      display: grid;
-      grid-template-columns: [col1] 1fr [col3] 1fr [col4] 1fr [col5] 1fr [col6] 1fr [col7];
-      grid-gap: 40px;
-    }
-    .content_container.page_grid.contents {
-      display: grid;
-      grid-template-columns: [col1] 1fr [col3] 1fr [col5] 1fr [col7];
-      grid-gap: 40px;
-    }
-    }
-    @media (min-width: 768px) and (max-width: 1279px) {
-    .menubar ul {
-      display: none;
-    }
-    .topnav {
-      display: block;
-    }
-    .topnav a {
-      float: left;
-      display: block;
-      color: #505050;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-      font-size: 17px;
-    }
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon1 {
-      float: right;
-      display: block;
-    }
-    .topnav a.icon2 {
-      float: right;
-      display: block;
-    }
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon1 {
-      position: absolute;
-      right: 6.5vw;
-      top: 0;
-    }
-    .topnav.responsive .icon2 {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-    .stripe.introduction {
-      background-size: 120%;
-    }
-    .stripe.introduction h1 {
-      font-size: 3.5em;
-    }
-    .stripe.introduction h2 {
-      font-size: 18px;
-      margin-top: 5vh;
-      margin-left: 5vw;
-      margin-right: 5vw;
-    }
-    div.form-container {
-      margin-top: 0vh;
-    }
-    h3{
-      margin-top: 0vh;
-    }
-    }
-    @media (min-width: 375px) and (max-width: 767px) {
-    .menubar ul {
-      display: none;
-    }
-    .topnav {
-      display: block;
-    }
-    .topnav a {
-      float: left;
-      display: block;
-      color: #505050;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-      font-size: 17px;
-    }
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon1 {
-      float: right;
-      display: block;
-    }
-    .topnav a.icon2 {
-      float: right;
-      display: block;
-    }
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon1 {
-      position: absolute;
-      right: 12vw;
-      top: 0;
-    }
-    .topnav.responsive .icon2 {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-    .stripe.introduction {
-      background-size: 250%;
-    }
-    .stripe.introduction h1 {
-      font-size: 2em;
-      margin-top: 20vh;
-    }
-    .stripe.introduction h2 {
-      font-size: 16px;
-      margin-top: 5vh;
-      margin-left: 5vw;
-      margin-right: 5vw;
-    }
-    div.form-container {
-      margin-top: 0vh;
-    }
-    h3{
-      margin-top: 0vh;
-      margin-left: 0vw;
-      margin-right: 0vw;
-      font-size: 16px;
-    }
-    }
-    @media only screen and (max-width: 374px) {
-    .menubar ul {
-      display: none;
-    }
-    .topnav {
-      display: block;
-    }
-    .topnav a {
-      float: left;
-      display: block;
-      color: #505050;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-      font-size: 17px;
-    }
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon1 {
-      float: right;
-      display: block;
-    }
-    .topnav a.icon2 {
-      float: right;
-      display: block;
-    }
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon1 {
-      position: absolute;
-      right: 12vw;
-      top: 0;
-    }
-    .topnav.responsive .icon2 {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-    .stripe.introduction {
-      background-size: 250%;
-    }
-    .stripe.introduction h1 {
-      font-size: 2em;
-      margin-top: 20vh;
-    }
-    .stripe.introduction h2 {
-      font-size: 16px;
-      margin-top: 5vh;
-      margin-left: 5vw;
-      margin-right: 5vw;
-    }
-    div.form-container {
-      margin-top: 0vh;
-    }
-    h3{
-      margin-top: 0vh;
-      margin-left: 0vw;
-      margin-right: 0vw;
-      font-size: 16px;
-    }
-    }
+@media only screen and (min-width: 1280px) {
+  .stripe {
+    grid-template-columns: [left] 100px [col1] 1fr [col7] 100px [right];
+  }
+  .content_container.page_grid.features {
+    display: grid;
+    grid-template-columns: [col1] 1fr [col3] 1fr [col4] 1fr [col5] 1fr [col6] 1fr [col7];
+    grid-gap: 40px;
+  }
+  .content_container.page_grid.contents {
+    display: grid;
+    grid-template-columns: [col1] 1fr [col3] 1fr [col5] 1fr [col7];
+    grid-gap: 40px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1279px) {
+  .menubar ul {
+    display: none;
+  }
+  .topnav {
+    display: block;
+  }
+  .topnav a {
+    float: left;
+    display: block;
+    color: #505050;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a.icon1 {
+    float: right;
+    display: block;
+  }
+  .topnav a.icon2 {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive .icon1 {
+    position: absolute;
+    right: 6.5vw;
+    top: 0;
+  }
+  .topnav.responsive .icon2 {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .stripe.introduction {
+    background-size: 120%;
+  }
+  .stripe.introduction h1 {
+    font-size: 3.5em;
+  }
+  .stripe.introduction h2 {
+    font-size: 18px;
+    margin-top: 5vh;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+  div.form-container {
+    margin-top: 0vh;
+  }
+  h3 {
+    margin-top: 0vh;
+  }
+}
+@media (min-width: 375px) and (max-width: 767px) {
+  .menubar ul {
+    display: none;
+  }
+  .topnav {
+    display: block;
+  }
+  .topnav a {
+    float: left;
+    display: block;
+    color: #505050;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a.icon1 {
+    float: right;
+    display: block;
+  }
+  .topnav a.icon2 {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive .icon1 {
+    position: absolute;
+    right: 12vw;
+    top: 0;
+  }
+  .topnav.responsive .icon2 {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .stripe.introduction {
+    background-size: 250%;
+  }
+  .stripe.introduction h1 {
+    font-size: 2em;
+    margin-top: 20vh;
+  }
+  .stripe.introduction h2 {
+    font-size: 16px;
+    margin-top: 5vh;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+  div.form-container {
+    margin-top: 0vh;
+  }
+  h3 {
+    margin-top: 0vh;
+    margin-left: 0vw;
+    margin-right: 0vw;
+    font-size: 16px;
+  }
+}
+@media only screen and (max-width: 374px) {
+  .menubar ul {
+    display: none;
+  }
+  .topnav {
+    display: block;
+  }
+  .topnav a {
+    float: left;
+    display: block;
+    color: #505050;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a.icon1 {
+    float: right;
+    display: block;
+  }
+  .topnav a.icon2 {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive .icon1 {
+    position: absolute;
+    right: 12vw;
+    top: 0;
+  }
+  .topnav.responsive .icon2 {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .stripe.introduction {
+    background-size: 250%;
+  }
+  .stripe.introduction h1 {
+    font-size: 2em;
+    margin-top: 20vh;
+  }
+  .stripe.introduction h2 {
+    font-size: 16px;
+    margin-top: 5vh;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+  div.form-container {
+    margin-top: 0vh;
+  }
+  h3 {
+    margin-top: 0vh;
+    margin-left: 0vw;
+    margin-right: 0vw;
+    font-size: 16px;
+  }
+}
