--- a/gallery.css
+++ b/gallery.css
@@ -1,56 +1,55 @@
 html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
-  }
-  
-  
-  ::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-  }
-  
-  ::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-  }
-  
-  /*
+  color: #222;
+  font-size: 1em;
+  line-height: 1.4;
+}
+
+::-moz-selection {
+  background: #b3d4fc;
+  text-shadow: none;
+}
+
+::selection {
+  background: #b3d4fc;
+  text-shadow: none;
+}
+
+/*
    * Remove default fieldset styles.
    */
-  
-  fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-  }
-  
-  /*
+
+fieldset {
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
+/*
    * Allow only vertical resizing of textareas.
    */
-  
-  textarea {
-    resize: vertical;
-  }
-  
-  /* ==========================================================================
+
+textarea {
+  resize: vertical;
+}
+
+/* ==========================================================================
      Author's custom styles
      ========================================================================== */
-  
-  /* ==========================================================================
+
+/* ==========================================================================
      Helper classes
      ========================================================================== */
-  
-  /*
+
+/*
    * Hide visually and from screen readers
    */
-  
-  .hidden,
-  [hidden] {
-    display: none !important;
-  }
-  
-  /*
+
+.hidden,
+[hidden] {
+  display: none !important;
+}
+
+/*
    * Hide only visually, but have it available for screen readers:
    * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
    *
@@ -58,46 +57,46 @@ html {
    *    causes content to wrap 1 word per line:
    *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
    */
-  
-  .sr-only {
-    border: 0;
-    clip: rect(0, 0, 0, 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    /* 1 */
-  }
-  
-  /*
+
+.sr-only {
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  /* 1 */
+}
+
+/*
    * Extends the .sr-only class to allow the element
    * to be focusable when navigated to via the keyboard:
    * https://www.drupal.org/node/897638
    */
-  
-  .sr-only.focusable:active,
-  .sr-only.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    white-space: inherit;
-    width: auto;
-  }
-  
-  /*
+
+.sr-only.focusable:active,
+.sr-only.focusable:focus {
+  clip: auto;
+  height: auto;
+  margin: 0;
+  overflow: visible;
+  position: static;
+  white-space: inherit;
+  width: auto;
+}
+
+/*
    * Hide visually and from screen readers, but maintain layout
    */
-  
-  .invisible {
-    visibility: hidden;
-  }
-  
-  /*
+
+.invisible {
+  visibility: hidden;
+}
+
+/*
    * Clearfix: contain floats
    *
    * For modern browsers
@@ -108,237 +107,243 @@ html {
    * 2. The use of `table` rather than `block` is only necessary if using
    *    `:before` to contain the top-margins of child elements.
    */
-  
-  .clearfix::before,
-  .clearfix::after {
-    content: " ";
-    display: table;
+
+.clearfix::before,
+.clearfix::after {
+  content: " ";
+  display: table;
+}
+
+.clearfix::after {
+  clear: both;
+}
+/*===================typography========================*/
+body {
+  background-color: #ffffff;
+  font-family: "Lato", sans-serif;
+  margin-block-start: 0 !important;
+  margin-block-end: 0 !important;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+/*===================typography========================*/
+/*======================menubar========================*/
+.menubar {
+  background-color: #ffffff;
+  padding: 10px 0px;
+  position: fixed;
+  width: 100vw;
+  top: 0;
+  overflow: hidden;
+  z-index: 9999;
+  box-shadow: 0px 12px 24px rgb(0 0 0 / 10%);
+}
+.menubar ul {
+  list-style-type: none;
+  padding: 0;
+  margin-block-start: 0 !important;
+  margin-block-end: 0 !important;
+  display: flex;
+  justify-content: space-around;
+}
+.menubar ul li {
+  display: flex;
+  vertical-align: middle;
+  align-items: center;
+}
+.menubar a {
+  text-decoration: none;
+  letter-spacing: 1px;
+  font-size: 1em;
+  font-weight: 600;
+  padding: 10px;
+  color: #505050 !important;
+  vertical-align: middle;
+}
+.menubar a:hover {
+  background-color: grey;
+}
+img.logo {
+  width: 50px;
+  height: fit-content;
+}
+a.logo {
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 18px;
+  padding: 10px;
+  color: #ffffff;
+  vertical-align: middle;
+}
+.content_container input[type="text"] {
+  float: right;
+  padding: 6px;
+  margin-top: 0px;
+  margin-right: 0px;
+  border-bottom: 1px solid #505050;
+  border-top: 0px;
+  border-right: 0px;
+  border-left: 0px;
+  font-size: 17px;
+}
+::placeholder {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+.topnav {
+  display: none;
+}
+/*======================herobanner========================*/
+.stripe {
+  display: grid;
+  grid-template-columns: [left] 20px [col1] 1fr [col7] 20px [right];
+}
+
+.stripe.introduction {
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.65),
+      rgba(255, 255, 255, 0.65)
+    ),
+    url("images/intro.jpg");
+  background-size: 100%;
+  height: 60vh;
+  background-repeat: no-repeat;
+  padding: 0px;
+}
+
+.stripe.introduction h1 {
+  font-family: "Rozha One", serif;
+  text-align: center;
+  font-size: 4.5em;
+  font-weight: 100;
+  color: #323232;
+  margin-top: 25vh;
+  margin-bottom: 0vh;
+  margin-left: auto;
+  margin-right: auto;
+  letter-spacing: 5px;
+}
+
+.stripe.introduction h2 {
+  text-align: center;
+  font-size: 20px;
+  color: #0f1f2a;
+  margin-top: 1vh;
+  margin-bottom: 0vh;
+  margin-left: auto;
+  margin-right: auto;
+  letter-spacing: 2px;
+}
+
+.fotorama {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: auto;
+}
+/*======================footer========================*/
+div.footer1 {
+  margin-left: auto;
+  margin-right: auto;
+}
+div.footer2 {
+  margin-top: 10px;
+  margin-left: 30vw;
+  margin-right: 30vw;
+}
+p.footer1 {
+  margin-left: auto;
+  margin-right: auto;
+  color: #ffffff;
+  text-align: right;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 18px;
+}
+p.footer2 {
+  color: #ffffff;
+  text-align: center;
+  font-size: 14px;
+}
+img.logoend {
+  display: block;
+  width: 50%;
+  margin: auto;
+}
+p.logoend {
+  text-decoration: none;
+  text-transform: uppercase;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  letter-spacing: 1px;
+  font-size: 18px;
+  color: #ffffff;
+  vertical-align: middle;
+}
+
+/*======================footer========================*/
+.content_container {
+  grid-column-start: col1;
+  grid-column-end: col7;
+}
+.content_container.page_grid {
+  display: grid;
+  grid-gap: 20px 0px;
+}
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  font-size: 1em;
+  font-family: "Open Sans";
+}
+
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  font-size: 1em;
+  font-family: "Open Sans";
+}
+
+::-ms-input-placeholder {
+  /* Microsoft Edge */
+  font-size: 1em;
+  font-family: "Open Sans";
+}
+.footer {
+  padding-top: 40px;
+  padding-bottom: 20px;
+  background-color: #000000;
+  display: grid;
+  grid-template-columns: [col1] 1fr [col7];
+  grid-gap: 0px;
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
   }
-  
-  .clearfix::after {
-    clear: both;
-  }
-  /*===================typography========================*/
-  body {
-    background-color: #ffffff;
-    font-family: 'Lato', sans-serif;
-    margin-block-start: 0 !important;
-    margin-block-end: 0 !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-  }
-  /*===================typography========================*/
-  /*======================menubar========================*/
-  .menubar {
-    background-color: #ffffff;
-    padding: 10px 0px;
-    position: fixed;
-    width: 100vw;
+
+  to {
     top: 0;
-    overflow: hidden;
-    z-index: 9999;
-    box-shadow: 0px 12px 24px rgb(0 0 0 / 10%);
+    opacity: 1;
   }
-  .menubar ul {
-    list-style-type: none;
-    padding: 0;
-    margin-block-start: 0 !important;
-    margin-block-end: 0 !important;
-    display: flex;
-    justify-content: space-around;
-  }
-  .menubar ul li {
-    display: flex;
-    vertical-align: middle;
-    align-items: center;
-  }
-  .menubar a {
-    text-decoration: none;
-    letter-spacing: 1px;
-    font-size: 1em;
-    font-weight: 600;
-    padding: 10px;
-    color: #505050 !important;
-    vertical-align: middle;
-  }
-  .menubar a:hover {
-    background-color: grey;
-  }
-  img.logo {
-    width: 50px;
-    height: fit-content;
-  
-  }
-  a.logo {
-    text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 18px;
-    padding: 10px;
-    color: #ffffff;
-    vertical-align: middle;
-  }
-  .content_container input[type=text] {
-    float: right;
-    padding: 6px;
-    margin-top: 0px;
-    margin-right: 0px;
-    border-bottom: 1px solid #505050;
-    border-top: 0px;
-    border-right: 0px;
-    border-left: 0px; 
-    font-size: 17px;
-  }
-  ::placeholder {
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 16px;
-  }
-  .topnav {
-    display: none;
-    }
-  /*======================herobanner========================*/
-  .stripe {
-    display: grid;
-    grid-template-columns: [left] 20px [col1] 1fr [col7] 20px [right];
+}
+
+@keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0;
   }
 
-  .stripe.introduction {
-    background-image: linear-gradient(rgba(255,255,255,0.65), rgba(255,255,255,0.65)), url('images/intro.jpg');
-    background-size: 100%;
-    height: 60vh;
-    background-repeat: no-repeat;
-    padding: 0px;
+  to {
+    top: 0;
+    opacity: 1;
   }
+}
 
-  .stripe.introduction h1 {
-    font-family: 'Rozha One',serif;
-    text-align: center;
-    font-size: 4.5em;
-    font-weight: 100;
-    color: #323232;
-    margin-top: 25vh;
-    margin-bottom: 0vh;
-    margin-left: auto;
-    margin-right: auto;
-    letter-spacing: 5px; 
-  }
-
-  .stripe.introduction h2 {
-    text-align: center;
-    font-size: 20px;
-    color: #0f1f2a;
-    margin-top: 1vh;
-    margin-bottom: 0vh;
-    margin-left: auto;
-    margin-right: auto;
-    letter-spacing: 2px; 
-  }
-
-  .fotorama {
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: auto;
-  }
-/*======================footer========================*/
-    div.footer1 {
-      margin-left: auto;
-      margin-right: auto;
-    }
-    div.footer2 {
-      margin-top: 10px;
-      margin-left: 30vw;
-      margin-right: 30vw;
-    }
-    p.footer1 {
-      margin-left: auto;
-      margin-right: auto;
-      color: #ffffff;
-      text-align: right;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      font-size: 18px;
-    }
-    p.footer2 {
-      color: #ffffff;
-      text-align: center;
-      font-size: 14px;
-    }
-    img.logoend {
-      display: block;
-      width: 50%;
-      margin: auto;
-    }
-    p.logoend {
-      text-decoration: none;
-      text-transform: uppercase;
-      margin-left: auto; 
-      margin-right: auto; 
-      text-align: center; 
-      letter-spacing: 1px;
-      font-size: 18px;
-      color: #ffffff;
-      vertical-align: middle;
-    }
-
-/*======================footer========================*/
-  .content_container {
-    grid-column-start: col1;
-    grid-column-end: col7;
-  }
-  .content_container.page_grid {
-    display: grid;
-    grid-gap: 20px 0px;
-  } 
-  ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-  font-size: 1em;
-  font-family: 'Open Sans';
-  }
-  
-  :-ms-input-placeholder { /* Internet Explorer 10-11 */
-  font-size: 1em;
-  font-family: 'Open Sans';
-  }
-  
-  ::-ms-input-placeholder { /* Microsoft Edge */
-  font-size: 1em;
-  font-family: 'Open Sans';
-  }
-  .footer {
-    padding-top: 40px;
-    padding-bottom: 20px;
-    background-color: #000000;
-    display: grid;
-    grid-template-columns: [col1] 1fr [col7];
-    grid-gap: 0px;
-  }
-  
-  /* Add Animation */
-  @-webkit-keyframes animatetop {
-    from {
-        top: -300px;
-        opacity: 0
-    }
-  
-    to {
-        top: 0;
-        opacity: 1
-    }
-  }
-  
-  @keyframes animatetop {
-    from {
-        top: -300px;
-        opacity: 0
-    }
-  
-    to {
-        top: 0;
-        opacity: 1
-    }
-  }
-  
-  #top {
+#top {
   position: fixed; /* Fixed/sticky position */
   bottom: 20px; /* Place the button at the bottom of the page */
   right: 30px; /* Place the button 30px from the right */
@@ -351,114 +356,114 @@ html {
   padding: 15px; /* Some padding */
   border-radius: 5px; /* Rounded corners */
   font-size: 18px; /* Increase font size */
-  }
-  
-  #top:hover {
-  background-color: #505050; /* Add a dark-grey background on hover */
-  }
+}
 
-  /* Responsive layout - makes a one column-layout instead of a two-column layout */
-  @media print,
-    (-webkit-min-device-pixel-ratio: 1.25),
-    (min-resolution: 1.25dppx),
-    (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
-  }
-  
-  /* ==========================================================================
+#top:hover {
+  background-color: #505050; /* Add a dark-grey background on hover */
+}
+
+/* Responsive layout - makes a one column-layout instead of a two-column layout */
+@media print,
+  (-webkit-min-device-pixel-ratio: 1.25),
+  (min-resolution: 1.25dppx),
+  (min-resolution: 120dpi) {
+  /* Style adjustments for high resolution devices */
+}
+
+/* ==========================================================================
      Print styles.
      Inlined to avoid the additional HTTP request:
      https://www.phpied.com/delay-loading-your-print-css/
      ========================================================================== */
-  
-  @media print {
-    *,
-    *::before,
-    *::after {
-      background: #fff !important;
-      color: #000 !important;
-      /* Black prints faster */
-      box-shadow: none !important;
-      text-shadow: none !important;
-    }
-  
-    a,
-    a:visited {
-      text-decoration: underline;
-    }
-  
-    a[href]::after {
-      content: " (" attr(href) ")";
-    }
-  
-    abbr[title]::after {
-      content: " (" attr(title) ")";
-    }
-  
-    /*
+
+@media print {
+  *,
+  *::before,
+  *::after {
+    background: #fff !important;
+    color: #000 !important;
+    /* Black prints faster */
+    box-shadow: none !important;
+    text-shadow: none !important;
+  }
+
+  a,
+  a:visited {
+    text-decoration: underline;
+  }
+
+  a[href]::after {
+    content: " (" attr(href) ")";
+  }
+
+  abbr[title]::after {
+    content: " (" attr(title) ")";
+  }
+
+  /*
      * Don't show links that are fragment identifiers,
      * or use the `javascript:` pseudo protocol
      */
-    a[href^="#"]::after,
-    a[href^="javascript:"]::after {
-      content: "";
-    }
-  
-    pre {
-      white-space: pre-wrap !important;
-    }
-  
-    pre,
-    blockquote {
-      border: 1px solid #999;
-      page-break-inside: avoid;
-    }
-  
-    /*
+  a[href^="#"]::after,
+  a[href^="javascript:"]::after {
+    content: "";
+  }
+
+  pre {
+    white-space: pre-wrap !important;
+  }
+
+  pre,
+  blockquote {
+    border: 1px solid #999;
+    page-break-inside: avoid;
+  }
+
+  /*
      * Printing Tables:
      * https://web.archive.org/web/20180815150934/http://css-discuss.incutio.com/wiki/Printing_Tables
      */
-    thead {
-      display: table-header-group;
-    }
-  
-    tr,
-    img {
-      page-break-inside: avoid;
-    }
-  
-    p,
-    h2,
-    h3 {
-      orphans: 3;
-      widows: 3;
-    }
-  
-    h2,
-    h3 {
-      page-break-after: avoid;
-    }
+  thead {
+    display: table-header-group;
   }
-    section.gallery {
-      margin-top: 10vh; 
-      margin-right: auto; 
-      margin-left: auto;
-      text-align: center;
-    }
-    .gallery h2 {
-      font-size: 1.5em;
-    }
+
+  tr,
+  img {
+    page-break-inside: avoid;
+  }
+
+  p,
+  h2,
+  h3 {
+    orphans: 3;
+    widows: 3;
+  }
+
+  h2,
+  h3 {
+    page-break-after: avoid;
+  }
+}
+section.gallery {
+  margin-top: 10vh;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+}
+.gallery h2 {
+  font-size: 1.5em;
+}
 ul.image_list {
-	padding-left: 0px;
+  padding-left: 0px;
   padding-right: 0px;
   margin-block-start: auto;
-  margin-block-end: auto; 
+  margin-block-end: auto;
   margin-top: auto;
   margin-bottom: auto;
 }
 
 li.image_list {
-    display: inline;
+  display: inline;
 }
 
 .image_small {
@@ -499,7 +504,9 @@ li.image_list {
     text-decoration: none;
     font-size: 17px;
   }
-  .topnav a:not(:first-child) {display: none;}
+  .topnav a:not(:first-child) {
+    display: none;
+  }
   .topnav a.icon1 {
     float: right;
     display: block;
@@ -508,7 +515,9 @@ li.image_list {
     float: right;
     display: block;
   }
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+    position: relative;
+  }
   .topnav.responsive .icon1 {
     position: absolute;
     right: 6.5vw;
@@ -539,8 +548,8 @@ li.image_list {
   .image_small {
     height: 5vh;
   }
-  }
-  @media (min-width: 375px) and (max-width: 767px) {
+}
+@media (min-width: 375px) and (max-width: 767px) {
   .menubar ul {
     display: none;
   }
@@ -556,7 +565,9 @@ li.image_list {
     text-decoration: none;
     font-size: 17px;
   }
-  .topnav a:not(:first-child) {display: none;}
+  .topnav a:not(:first-child) {
+    display: none;
+  }
   .topnav a.icon1 {
     float: right;
     display: block;
@@ -565,7 +576,9 @@ li.image_list {
     float: right;
     display: block;
   }
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+    position: relative;
+  }
   .topnav.responsive .icon1 {
     position: absolute;
     right: 12vw;
@@ -598,7 +611,7 @@ li.image_list {
     height: 5vh;
   }
   section.gallery {
-    margin-top: 0vh; 
+    margin-top: 0vh;
   }
   .gallery h2 {
     font-size: 1.25em !important;
@@ -606,8 +619,8 @@ li.image_list {
   .slideshow h2 {
     font-size: 1.25em !important;
   }
-  }
-  @media only screen and (max-width: 374px) {
+}
+@media only screen and (max-width: 374px) {
   .menubar ul {
     display: none;
   }
@@ -623,7 +636,9 @@ li.image_list {
     text-decoration: none;
     font-size: 17px;
   }
-  .topnav a:not(:first-child) {display: none;}
+  .topnav a:not(:first-child) {
+    display: none;
+  }
   .topnav a.icon1 {
     float: right;
     display: block;
@@ -632,7 +647,9 @@ li.image_list {
     float: right;
     display: block;
   }
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+    position: relative;
+  }
   .topnav.responsive .icon1 {
     position: absolute;
     right: 12vw;
@@ -665,7 +682,7 @@ li.image_list {
     height: 5vh;
   }
   section.gallery {
-    margin-top: 0vh; 
+    margin-top: 0vh;
   }
   .gallery h2 {
     font-size: 1.25em !important;
@@ -673,4 +690,4 @@ li.image_list {
   .slideshow h2 {
     font-size: 1.25em !important;
   }
-  }
+}
