Update faq.css alignment

--- a/faq.css
+++ b/faq.css
@@ -1,73 +1,68 @@
 body {
-<<<<<<< HEAD
-    background-color: #ffffff;
-    font-family: 'Lato', sans-serif;
-    margin-block-start: 0 !important;
-    margin-block-end: 0 !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-  }
-  .stripe.introduction {
-    background-image: linear-gradient(rgba(255,255,255,0.65), rgba(255,255,255,0.65)), url('images/intro.jpg');
-    background-size: 100%;
-    height: 60vh;
-    background-repeat: no-repeat;
-    padding: 0px;
-  }
-  .stripe.introduction h1 {
-    font-family: 'Rozha One',serif;
-    text-align: center;
-    font-size: 4.5em;
-    font-weight: 100;
-    color: #323232;
-    margin-top: 25vh;
-    margin-bottom: 0vh;
-    margin-left: auto;
-    margin-right: auto;
-    letter-spacing: 5px; 
-  }
-
-  .stripe.introduction h2 {
-    text-align: center;
-    font-size: 20px;
-    color: #0f1f2a;
-    margin-top: 1vh;
-    margin-bottom: 0vh;
-    margin-left: auto;
-    margin-right: auto;
-    letter-spacing: 2px; 
-  }
-  .topnav {
-    display: none;
-    }
-  section.button-containter {
-    margin-top: 0vh;
-    margin-bottom: 20vh; 
-  }
-  h3.accordion {
-    background-color: #70cf84 !important;
-    color:  #ffffff !important;
-    cursor: pointer;
-    padding: 2% !important;
-    border: 0px;
-    border-radius:10px;
-    width: auto !important;
-    margin-left: 0vw !important;
-    margin-right: 0vw !important;
-    margin-top: 10vh !important;
-    margin-bottom: 0vh !important;
-    text-align: left;
-    outline: none;
-    transition: 0.4s;
-    font-size: 1.5em !important;
-=======
   background-color: #ffffff;
   font-family: "Lato", sans-serif;
   margin-block-start: 0 !important;
   margin-block-end: 0 !important;
   margin-left: 0 !important;
   margin-right: 0 !important;
->>>>>>> 6f31fb6 (Update alignment)
+}
+.stripe.introduction {
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.65),
+      rgba(255, 255, 255, 0.65)
+    ),
+    url("images/intro.jpg");
+  background-size: 100%;
+  height: 60vh;
+  background-repeat: no-repeat;
+  padding: 0px;
+}
+.stripe.introduction h1 {
+  font-family: "Rozha One", serif;
+  text-align: center;
+  font-size: 4.5em;
+  font-weight: 100;
+  color: #323232;
+  margin-top: 25vh;
+  margin-bottom: 0vh;
+  margin-left: auto;
+  margin-right: auto;
+  letter-spacing: 5px;
+}
+
+.stripe.introduction h2 {
+  text-align: center;
+  font-size: 20px;
+  color: #0f1f2a;
+  margin-top: 1vh;
+  margin-bottom: 0vh;
+  margin-left: auto;
+  margin-right: auto;
+  letter-spacing: 2px;
+}
+.topnav {
+  display: none;
+}
+section.button-containter {
+  margin-top: 0vh;
+  margin-bottom: 20vh;
+}
+h3.accordion {
+  background-color: #70cf84 !important;
+  color: #ffffff !important;
+  cursor: pointer;
+  padding: 2% !important;
+  border: 0px;
+  border-radius: 10px;
+  width: auto !important;
+  margin-left: 0vw !important;
+  margin-right: 0vw !important;
+  margin-top: 10vh !important;
+  margin-bottom: 0vh !important;
+  text-align: left;
+  outline: none;
+  transition: 0.4s;
+  font-size: 1.5em !important;
 }
 .stripe.introduction {
   background-image: linear-gradient(
